--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-colorpicker/2.5.2/js/bootstrap-colorpicker.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.2/d3.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/tinycolor/1.4.1/tinycolor.js"></script>
+<!--<script src="//cdnjs.cloudflare.com/ajax/libs/tinycolor/1.4.1/tinycolor.js"></script>-->
 <script src="//cdnjs.cloudflare.com/ajax/libs/regression/1.4.0/regression.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.js"></script>
 
