better LCHab support

--- a/index.html
+++ b/index.html
@@ -115,28 +115,28 @@
                 <label>
                     <div class="input-number input-group">
                         <span class="input-group-addon">L</span>
-                        <input type="number" class="form-control" id="lchab-l-number" min="0" max="100">
+                        <input type="number" class="form-control" id="lchab-l-number" min="0" max="100" disabled="disabled">
                     </div>
                     <section  data-shape='slider'>
-                        <input type='range' id="lchab-l-range" min="0" max="100" step="1"/>
+                        <input type='range' id="lchab-l-range" min="0" max="100"/>
                     </section>
                 </label>
                 <label>
                     <div class="input-number input-group">
                         <span class="input-group-addon">C</span>
-                        <input type="number" class="form-control" id="lchab-c-number" min="0" max="100">
+                        <input type="number" class="form-control" id="lchab-c-number" min="0" max="100" disabled="disabled">
                     </div>
                     <section  data-shape='slider'>
-                        <input type='range' id="lchab-c-range" min="0" max="100" step="1"/>
+                        <input type='range' id="lchab-c-range" min="0" max="100"/>
                     </section>
                 </label>
                 <label>
                     <div class="input-number input-group">
                         <span class="input-group-addon">H</span>
-                        <input type="number" class="form-control" id="lchab-h-number" min="0" max="360">
+                        <input type="number" class="form-control" id="lchab-h-number" min="0" max="360" disabled="disabled">
                     </div>
                     <section  data-shape='slider'>
-                        <input type='range' id="lchab-h-range" min="0" max="360" step="1"/>
+                        <input type='range' id="lchab-h-range" min="0" max="360"/>
                     </section>
                 </label>
             </div>
