--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
             <div id="canvas">
             </div>
 
+            <!--<div class="separator"></div>-->
+
+            <!--<div id="custom-picker">-->
+
+            <!--</div>-->
+
         </div>
         <a href="#" class="btn btn-default" id="background-color">Change background color</a>
         <hr>
@@ -183,6 +189,12 @@
                 <!--<button class="btn btn-primary"><i class="glyphicon glyphicon-save"></i> Export</button>-->
             </div>
     </div>
+
+    <footer class="footer">
+        <div class="container">
+            Tool for investigating color distances? spaces? for creating palettes? based on an idea by <em title="🐍">Tritanopia</em>.
+        </div>
+    </footer>
 
 </div>
 
