add export canvases

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
         </div>
         <a href="#" class="btn btn-default" id="background-color">Change background color</a>
+
         <hr>
         <div class="controls">
 
@@ -183,6 +184,13 @@
                 <div class="input-number input-group">
                     <span class="input-group-addon">#</span>
                     <input type="number" class="form-control" min="3" max="10" value="3" id="colors-number">
+                </div>
+
+                <div class="export">
+                    <canvas id="export-1x" width="100px" height="14px">
+                    </canvas>
+                    <canvas id="export-2x" width="100px" height="14px">
+                    </canvas>
                 </div>
                 <!--<button class="btn btn-default">Render</button>-->
                 <!--<div class="separator"></div>-->
