--- a/index.html
+++ b/index.html
@@ -38,10 +38,16 @@
     <div class="sidebar">
 
         <div class="controls">
-            <div id="color-picker" class="input-group colorpicker-component">
+            <div class="input-group">
+                <div><span class="label label-default">HSV picker</span></div>
+                <div id="color-picker" class="colorpicker-component">
+                </div>
             </div>
             <div class="separator"></div>
-            <div id="lch-picker" class="input-group">
+            <div class="input-group">
+                <div><span class="label label-default">LCH picker</span></div>
+                <div id="lch-picker">
+            </div>
             </div>
             <div class="separator"></div>
             <div id="canvas">
