hue-colored circles

--- a/index.html
+++ b/index.html
@@ -178,6 +178,8 @@
                     <option value="RGB">RGB</option>
                     <option value="LCH">LCH</option>
                 </select>
+                <hr>
+                <label class="checkbox-label"><input id="colorful-circles" type="checkbox" checked="checked"> hue-colored circles</label>
             </div>
 
 
